Add cross-module student search
